feature(layout): Completed the about section

--- a/src/lib/styles/_fonts.scss
+++ b/src/lib/styles/_fonts.scss
@@ -15,3 +15,21 @@
   font-style: normal;
   font-display: swap;
 }
+
+/* Onest Medium */
+@font-face {
+  font-family: 'Onest';
+  src: url('/src/lib/assets/fonts/Onest-Medium.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Onest Bold */
+@font-face {
+  font-family: 'Onest';
+  src: url('/src/lib/assets/fonts/Onest-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
