refactor: change black to custom color

--- a/src/lib/styles/_variables.scss
+++ b/src/lib/styles/_variables.scss
@@ -20,6 +20,7 @@ $color-primary: #fcb0ff;
 $color-primary-dark: color.adjust($color-primary, $lightness: -5%);
 $color-primary-darker: color.adjust($color-primary, $lightness: -10%);
 $color-background: #d1acd8;
+$color-text: #3d072e;
 $color-black: #000000;
 
 // Spacing - Mobile first approach
